# models/position.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// Position position
+// swagger:model position
+type Position struct {
+
+	// latitude
+	// Maximum: 90
+	// Minimum: -90
+	Latitude interface{} `json:"latitude,omitempty"`
+
+	// longitude
+	// Maximum: 180
+	// Minimum: -180
+	Longitude interface{} `json:"longitude,omitempty"`
+}
+
+// Validate validates this position
+func (m *Position) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Position) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Position) UnmarshalBinary(b []byte) error {
+	var res Position
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
